// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Temp] render renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    activeOpacity={0.6}
    delayPressIn={50}
    onPress={[Function]}
    testID="btn-back"
  >
    <View
      onLayout={[Function]}
      outlined={false}
      style={
        Array [
          Object {
            "backgroundColor": "black",
            "borderBottomColor": "black",
            "borderLeftColor": "black",
            "borderRightColor": "black",
            "borderTopColor": "black",
          },
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 20,
              "borderBottomRightRadius": 20,
              "borderTopLeftRadius": 20,
              "borderTopRightRadius": 20,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 10,
            },
            Array [
              undefined,
              false,
              undefined,
            ],
          ],
        ]
      }
      testID="button-container"
      type="primary"
    >
      <Text />
      <Text
        outlined={false}
        style={
          Array [
            Object {
              "color": "white",
            },
            Array [
              undefined,
              undefined,
            ],
          ]
        }
        type="primary"
      >
        GO BACK
      </Text>
    </View>
  </View>
</View>
`;

exports[`[Temp] render should render [Dark] theme 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    activeOpacity={0.6}
    delayPressIn={50}
    onPress={[Function]}
    testID="btn-back"
  >
    <View
      onLayout={[Function]}
      outlined={false}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "borderBottomColor": "white",
            "borderLeftColor": "white",
            "borderRightColor": "white",
            "borderTopColor": "white",
          },
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 20,
              "borderBottomRightRadius": 20,
              "borderTopLeftRadius": 20,
              "borderTopRightRadius": 20,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 10,
            },
            Array [
              undefined,
              false,
              undefined,
            ],
          ],
        ]
      }
      testID="button-container"
      type="primary"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "black",
              },
              Object {
                "marginRight": 12,
              },
            ],
            Object {
              "fontFamily": "IcoMoon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        outlined={false}
        style={
          Array [
            Object {
              "color": "black",
            },
            Array [
              undefined,
              undefined,
            ],
          ]
        }
        type="primary"
      >
        GO BACK
      </Text>
    </View>
  </View>
</View>
`;
